# anki-audio-tools

./: .env.example  .gitignore  .gitnexusignore  AGENTS.md  ANKI_API.md  ARCHITECTURE.md  CLAUDE.md  CONFIG_SCHEMA.md  DEBUGGING.md  DEVELOPMENT.md  E2E_TESTING.md  EDITOR_MODIFICATION_BUTTON_BEHAVIOR_RULES.md  ERROR_HANDLING_AND_DIAGNOSTICS.md  LICENSE  README.md  RELEASE_SELF_SUFFICIENCY_ACTION_PLAN.md  RELEASE_SELF_SUFFICIENCY_AUDIT.md  TESTING.md  WEBVIEW_AND_TEMPLATES.md  anki_audio_quick_editor_feature_spec.md  delete-hover-prototypes.html  pyproject.toml  qodana.yaml  release_assets.lock.json  sonar-project.properties  vulture_whitelist.py
.codex/environments/: environment.toml
.github/workflows/: build-dpdfnet-macos.yml  build-dpdfnet-windows.yml  build-ffmpeg-runtime.yml  pages.yml
.serena/: project.yml
addon/anki_audio_quick_editor/: __init__.py  _version.py  audio_artifacts.py  audio_commands.py  audio_commands_runtime.py  audio_external.py  audio_formats.py  audio_noise_reduction.py  audio_noise_reduction_bundled.py  audio_operation_params.py  audio_operations.py  audio_output_policy.py  audio_pause_pipeline.py  audio_pause_pipeline_detection.py  audio_pause_pipeline_stage.py  audio_pause_pipeline_steps.py  audio_pause_settings.py  audio_pipeline.py  audio_pitch_hum.py  audio_pitch_hum_frames.py  audio_pitch_hum_synthesis.py  audio_processor.py  audio_processor_rendering_portal.py  audio_processor_runtime.py  audio_recording.py  audio_rendering.py  audio_state.py  audio_tools.py  audio_types.py  batch_operation_processing.py  batch_operation_types.py  batch_operations.py  batch_operations_helpers.py  batch_visualization.py  browser_batch_runner.py  browser_dialog.py  browser_dialog_state.py  browser_integration.py  browser_report.py  config.json  (+70 more)
anki_api_contract/: __init__.py  discover.py  test_real_anki_api_contract.py
archive/: EDITOR_REGION_DELETE_FEATURE_SPEC.md  EDITOR_SPLIT_BUTTONS_FEATURE_DESCRIPTION.md  EDITOR_SPLIT_BUTTONS_IMPLEMENTATION_PLAN.md  FRONTEND_ARCHITECTURE_REFACTOR_PLAN.md  region_selection_loop_playback_feature_plan.md
contracts/: communication.schema.json
docs/: ffmpeg-source-quality-analysis.md  index.html
docs/assets/: site.css
docs/errors/: error-page.js  index.html
docs/prototypes/: floating-plot-panel-prototypes.html  graph-selection-action-prototypes.html  progress-indicator-prototypes.html  region-selection-handle-prototypes.html  toolbar-visibility-settings-prototypes.html
e2e/: conftest.py  editor_audio_generation_helpers.py  editor_graph_helpers.py  editor_language_helpers.py  editor_note_helpers.py  editor_playback_helpers.py  editor_processing_workflow_helpers.py  editor_region_loop_helpers.py  helpers.py  race_helpers.py  settings_dialog_command_helpers.py  settings_dialog_helpers.py  test_audio_processing_ffmpeg.py  test_browser_batch_race_workflow.py  test_dpdfnet_attenuation_integration.py  test_editor_async_race_workflow.py  test_editor_audio_workflow.py  test_editor_deep_filter_failure_workflow.py  test_editor_deep_filter_pause_workflow.py  test_editor_deep_filter_workflow.py  test_editor_graph_parameters_workflow.py  test_editor_graph_visualizer_edges_workflow.py  test_editor_graph_visualizer_workflow.py  test_editor_graph_workflow.py  test_editor_integration.py  test_editor_language_contours.py  test_editor_playback_resume_behavior.py  test_editor_playback_workflow.py  test_editor_post_edit_playback_workflow.py  test_editor_processing_busy_workflow.py  test_editor_processing_graph_default_workflow.py  test_editor_processing_split_buttons_parameter_workflow.py  test_editor_processing_split_buttons_workflow.py  test_editor_processing_split_defaults_workflow.py  test_editor_processing_workflow.py  test_editor_region_delete_workflow.py  test_editor_region_loop_graph_workflow.py  test_editor_region_loop_playback_workflow.py  test_editor_region_loop_workflow.py  test_editor_region_resize_workflow.py  (+10 more)
scripts/: config_schema_validate.py  dev.py  dev_check.py  dev_cli.py  ffmpeg_runtime_capabilities.py  generate_contracts.py  gitnexus_auto_analyze.sh  release.py  release_acceptance.py  release_archive.py  release_asset_common.py  release_asset_io.py  release_asset_verify.py  release_assets.py  release_assets_cli.py  release_assets_cli_handlers.py  release_assets_commands.py  release_assets_core.py  release_assets_paths.py  release_assets_runtime_ops.py  release_bundle_freshness.py  release_manifest_selection.py  release_runtime.py  release_sherpa_assets.py  release_silero_assets.py  release_smoke.py  release_validation.py
scripts/dev_tasks/: __init__.py  contracts.py  coverage.py  e2e_parallel.py  file_lines.py  frontend.py  process.py  pytest_runner.py  python_env.py  quality.py  quality_tools.py  repository.py  setup.py
scripts/dpdfnet_cli/: build_lite.py  build_macos.sh  build_windows.ps1  (+1 more)
settings_ui/: eslint.config.js  eslint.max-lines.config.js  package-lock.json  package.json  tsconfig.json  vite.batch.config.ts  vite.config.ts  vite.editor.config.ts  vitest.config.ts
tests/: __init__.py  anki_test_mocks.py  audio_fixtures.py  browser_batch_fixtures.py  conftest.py  editor_bridge_command_fixtures.py  editor_recording_helpers.py  mutmut_support.py  prosody_language_fixtures.py  prosody_visualizer_harness.py  race_test_helpers.py  release_archive_fixtures.py  release_assets_helpers.py  settings_command_fixtures.py  test_addon_logging.py  test_anki_api_contract_mocks.py  test_audio_commands.py  test_audio_dpdfnet.py  test_audio_dpdfnet_tools.py  test_audio_external.py  test_audio_formats.py  test_audio_noise_commands.py  test_audio_noise_reduction.py  test_audio_operation_params.py  test_audio_output_policy.py  test_audio_pause_pipeline.py  test_audio_pipeline.py  test_audio_pitch_hum.py  test_audio_playback_rendering.py  test_audio_processor.py  test_audio_recording.py  test_audio_rendering.py  test_audio_rendering_convert.py  test_audio_rendering_regions.py  test_audio_rnnoise.py  test_audio_state.py  test_audio_tools.py  test_audio_voice_only.py  test_batch_conversion.py  test_batch_denoise.py  (+96 more)
(+324 files in other folders)
