[project]
name = "anki-audio-quick-editor"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "ruff",
    "vulture>=2.14",
    "mypy",
    "radon",
    "mccabe",
    "pyflakes",
    "import-linter",
    "deptry",
    "bandit",
    "pytest-randomly",
    "mutmut",
    "jsonschema",
]

[tool.pytest.ini_options]
testpaths = ["tests", "e2e"]

[tool.ruff]
src = ["addon", "tests", "e2e"]
exclude = ["addon/anki_audio_quick_editor/vendor", "vulture_whitelist.py"]

[tool.ruff.lint]
select = ["F", "E9", "B", "C90", "I"]

[tool.ruff.lint.isort]
known-first-party = ["anki_audio_quick_editor"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.13"
files = ["addon/anki_audio_quick_editor"]
exclude = "addon/anki_audio_quick_editor/vendor"
ignore_missing_imports = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
extra_checks = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[tool.radon]
cc_min = "C"
show_complexity = true

[tool.coverage.run]
source = ["addon/anki_audio_quick_editor"]
omit = ["addon/anki_audio_quick_editor/vendor/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "if __name__",
    "pass",
    "pragma: no cover",
]

[tool.importlinter]
root_packages = ["anki_audio_quick_editor"]
include_external_packages = true
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
name = "import-safe-no-upper-layers"
type = "forbidden"
source_modules = [
    "anki_audio_quick_editor._version",
    "anki_audio_quick_editor.audio_processor",
    "anki_audio_quick_editor.audio_state",
    "anki_audio_quick_editor.config_migration",
    "anki_audio_quick_editor.db_helpers",
    "anki_audio_quick_editor.editor_actions",
    "anki_audio_quick_editor.editor_ui",
    "anki_audio_quick_editor.errors",
    "anki_audio_quick_editor.settings_state",
    "anki_audio_quick_editor.sound_refs",
]
forbidden_modules = [
    "anki_audio_quick_editor.editor_integration",
    "anki_audio_quick_editor.settings.commands",
    "anki_audio_quick_editor.settings.initial_state",
]

[[tool.importlinter.contracts]]
name = "settings-backend-no-ui"
type = "forbidden"
source_modules = [
    "anki_audio_quick_editor.settings.commands",
    "anki_audio_quick_editor.settings.initial_state",
]
forbidden_modules = [
    "anki_audio_quick_editor.editor_integration",
]

[tool.bandit]
exclude_dirs = ["addon/anki_audio_quick_editor/vendor", "tests", "e2e"]
skips = [
    "B101",
    "B404",
]

[tool.deptry]
extend_exclude = ["addon/anki_audio_quick_editor/vendor", "settings_ui", "scripts"]
ignore_notebooks = true

[tool.deptry.per_rule_ignores]
DEP001 = ["aqt", "anki", "anki_audio_quick_editor", "debugpy", "PyQt6", "dev"]
DEP002 = ["pytest-qt", "pytest-randomly"]
DEP003 = ["aqt", "anki", "PyQt6"]

[tool.mutmut]
paths_to_mutate = "addon/anki_audio_quick_editor/"
tests_dir = "tests/"
runner = "python -m pytest tests/ -x -q"
