[project]
name = "anki-audio-quick-editor"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "ruff",
    "vulture>=2.14",
    "mypy",
    "radon",
    "mccabe",
    "pyflakes",
    "import-linter",
    "deptry",
    "bandit",
    "pytest-randomly",
    "mutmut",
    "jsonschema",
    "praat-parselmouth>=0.4.7",
]

[tool.pytest.ini_options]
testpaths = ["tests", "e2e"]
markers = [
    "praat: requires praat-parselmouth for generated speech contour fixtures",
]

[tool.ruff]
src = ["addon", "tests", "e2e"]
exclude = ["addon/anki_audio_quick_editor/vendor", "vulture_whitelist.py"]

[tool.ruff.lint]
select = ["F", "E9", "B", "C90", "I"]

[tool.ruff.lint.isort]
known-first-party = ["anki_audio_quick_editor"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.13"
files = ["addon/anki_audio_quick_editor"]
exclude = "addon/anki_audio_quick_editor/vendor"
ignore_missing_imports = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
extra_checks = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.radon]
cc_min = "C"
show_complexity = true

[tool.coverage.run]
source = ["addon/anki_audio_quick_editor"]
omit = ["addon/anki_audio_quick_editor/vendor/*"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
exclude_lines = [
    "if __name__",
    "pass",
    "pragma: no cover",
]

[tool.importlinter]
root_packages = ["anki_audio_quick_editor"]
include_external_packages = true
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
name = "import-safe-no-upper-layers"
type = "forbidden"
source_modules = [
    "anki_audio_quick_editor._version",
    "anki_audio_quick_editor.audio_operations",
    "anki_audio_quick_editor.audio_pipeline",
    "anki_audio_quick_editor.audio_artifacts",
    "anki_audio_quick_editor.audio_commands",
    "anki_audio_quick_editor.audio_external",
    "anki_audio_quick_editor.audio_noise_reduction",
    "anki_audio_quick_editor.audio_pause_pipeline",
    "anki_audio_quick_editor.audio_processor",
    "anki_audio_quick_editor.audio_rendering",
    "anki_audio_quick_editor.audio_state",
    "anki_audio_quick_editor.audio_tools",
    "anki_audio_quick_editor.audio_types",
    "anki_audio_quick_editor.batch_operations",
    "anki_audio_quick_editor.batch_visualization",
    "anki_audio_quick_editor.browser_report",
    "anki_audio_quick_editor.config_migration",
    "anki_audio_quick_editor.contracts_generated",
    "anki_audio_quick_editor.db_helpers",
    "anki_audio_quick_editor.diagnostics",
    "anki_audio_quick_editor.editor_actions",
    "anki_audio_quick_editor.editor_media",
    "anki_audio_quick_editor.editor_session",
    "anki_audio_quick_editor.editor_ui",
    "anki_audio_quick_editor.errors",
    "anki_audio_quick_editor.file_reveal",
    "anki_audio_quick_editor.prosody_analyzer",
    "anki_audio_quick_editor.prosody_cache",
    "anki_audio_quick_editor.prosody_fallback",
    "anki_audio_quick_editor.prosody_praat",
    "anki_audio_quick_editor.prosody_svg",
    "anki_audio_quick_editor.prosody_types",
    "anki_audio_quick_editor.settings_state",
    "anki_audio_quick_editor.sound_refs",
    "anki_audio_quick_editor.support",
]
forbidden_modules = [
    "anki_audio_quick_editor.browser_dialog",
    "anki_audio_quick_editor.browser_integration",
    "anki_audio_quick_editor.editor_analysis",
    "anki_audio_quick_editor.editor_bridge",
    "anki_audio_quick_editor.editor_callbacks",
    "anki_audio_quick_editor.editor_dependencies",
    "anki_audio_quick_editor.editor_frontend",
    "anki_audio_quick_editor.editor_frontend_callbacks",
    "anki_audio_quick_editor.editor_history",
    "anki_audio_quick_editor.editor_integration",
    "anki_audio_quick_editor.editor_playback",
    "anki_audio_quick_editor.editor_processing",
    "anki_audio_quick_editor.editor_region_delete",
    "anki_audio_quick_editor.editor_runtime",
    "anki_audio_quick_editor.editor_settings_actions",
    "anki_audio_quick_editor.settings",
    "anki_audio_quick_editor.settings.commands",
    "anki_audio_quick_editor.settings.initial_state",
]

[[tool.importlinter.contracts]]
name = "settings-backend-no-ui"
type = "forbidden"
source_modules = [
    "anki_audio_quick_editor.settings.commands",
    "anki_audio_quick_editor.settings.initial_state",
]
forbidden_modules = [
    "anki_audio_quick_editor.editor_integration",
]

[tool.bandit]
exclude_dirs = ["addon/anki_audio_quick_editor/vendor", "tests", "e2e"]
skips = [
    "B101",
    "B404",
]

[tool.deptry]
extend_exclude = ["addon/anki_audio_quick_editor/vendor", "settings_ui", "scripts"]
ignore_notebooks = true

[tool.deptry.package_module_name_map]
praat-parselmouth = ["parselmouth"]

[tool.deptry.per_rule_ignores]
DEP001 = ["aqt", "anki", "anki_audio_quick_editor", "debugpy", "parselmouth", "PyQt6", "dev"]
DEP002 = ["pytest-qt", "pytest-randomly"]
DEP003 = ["aqt", "anki", "PyQt6"]
DEP004 = ["parselmouth"]

[tool.mutmut]
paths_to_mutate = [
    "addon/anki_audio_quick_editor",
]
do_not_mutate = [
    "addon/anki_audio_quick_editor/__init__.py",
    "addon/anki_audio_quick_editor/_version.py",
    "addon/anki_audio_quick_editor/browser_integration.py",
    "addon/anki_audio_quick_editor/db_helpers.py",
    "addon/anki_audio_quick_editor/editor_actions.py",
    "addon/anki_audio_quick_editor/editor_integration.py",
    "addon/anki_audio_quick_editor/editor_ui.py",
    "addon/anki_audio_quick_editor/errors.py",
    "addon/anki_audio_quick_editor/prosody_analyzer.py",
    "addon/anki_audio_quick_editor/prosody_cache.py",
    "addon/anki_audio_quick_editor/prosody_fallback.py",
    "addon/anki_audio_quick_editor/prosody_praat.py",
    "addon/anki_audio_quick_editor/prosody_types.py",
    "addon/anki_audio_quick_editor/settings/__init__.py",
    "addon/anki_audio_quick_editor/settings/commands.py",
    "addon/anki_audio_quick_editor/settings/initial_state.py",
]
mutate_only_covered_lines = true
pytest_add_cli_args = [
    "-p",
    "no:randomly",
    "-p",
    "no:random-order",
]
pytest_add_cli_args_test_selection = [
    "tests/test_audio_state.py",
    "tests/test_config_migration.py",
    "tests/test_sound_refs.py",
    "tests/test_settings_state.py",
    "tests/test_batch_visualization.py",
    "tests/test_prosody_svg.py",
    "tests/test_audio_processor.py",
]
