[project]
name = "anki-audio-quick-editor"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov",
    "pytest-qt",
    "ruff",
    "vulture>=2.14",
    "mypy",
    "radon",
    "mccabe",
    "pyflakes",
    "import-linter",
    "deptry",
    "bandit",
    "pytest-randomly",
    "mutmut",
    "jsonschema",
    "praat-parselmouth>=0.4.7",
]

[tool.pytest]
minversion = "9.0"
testpaths = ["tests", "e2e"]
addopts = [
    "-ra",
]
strict = true
strict_xfail = true
filterwarnings = ["error"]
required_plugins = [
    "pytest-randomly",
]
markers = [
    "praat: requires praat-parselmouth for generated speech contour fixtures",
]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["addon", "tests", "e2e"]
exclude = ["addon/anki_audio_quick_editor/vendor", "vulture_whitelist.py"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "C4",
    "SIM",
    "RET",
    "ARG",
    "PTH",
    "RUF",
    "N",
    "A",
    "PT",
    "DTZ",
    "TID",
    "PIE",
    "PERF",
    "PL",
    "C90",
]
ignore = [
    "D100",
    "D104",
    "D107",
    "E501",
    "PLC0415",
    "PLR0402",
    "PLR0911",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PLW0603",
    "PLW1510",
    "PT017",
    "PT022",
    "RUF005",
    "RUF012",
    "RUF022",
    "RUF043",
    "RUF046",
    "RUF057",
    "RUF100",
    "SIM102",
    "SIM105",
    "SIM300",
    "SIM905",
    "TID252",
    "UP007",
    "UP035",
    "UP037",
    "UP042",
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["anki_audio_quick_editor"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"anki_api_contract/**/*.py" = [
    "ANN",
    "ARG",
    "C4",
    "D",
    "DTZ",
    "N",
    "PERF",
    "PIE",
    "PLR2004",
]
"e2e/**/*.py" = [
    "ANN",
    "ARG",
    "D",
    "DTZ",
    "N",
    "PERF",
    "PIE",
    "PLR2004",
    "PLW0108",
]
"scripts/**/*.py" = [
    "ANN",
    "ARG",
    "D",
    "DTZ",
    "E402",
    "N",
    "PLR2004",
    "PLW0108",
    "PLW2901",
]
"tests/**/*.py" = [
    "A002",
    "ANN",
    "ARG",
    "C4",
    "D",
    "DTZ",
    "E731",
    "N",
    "PERF",
    "PIE",
    "PLC0414",
    "PLR2004",
    "PLW0108",
]
"addon/**/__init__.py" = ["F401"]
"addon/anki_audio_quick_editor/audio_artifacts.py" = ["DTZ005"]
"addon/anki_audio_quick_editor/audio_pipeline.py" = ["DTZ005"]
"addon/anki_audio_quick_editor/audio_rendering.py" = ["DTZ005", "PTH119"]
"addon/anki_audio_quick_editor/browser_integration.py" = ["PERF401"]
"addon/anki_audio_quick_editor/prosody_svg.py" = ["DTZ005"]
"addon/anki_audio_quick_editor/settings_state.py" = ["PTH118"]
"addon/anki_audio_quick_editor/sound_refs.py" = ["PTH119"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 6
max-positional-args = 4
max-branches = 10
max-returns = 5
max-statements = 40
max-locals = 12
max-nested-blocks = 4

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.13"
files = ["addon/anki_audio_quick_editor"]
exclude = "addon/anki_audio_quick_editor/vendor"
ignore_missing_imports = false
disallow_any_generics = true
no_implicit_reexport = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
extra_checks = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "debugpy",
    "parselmouth",
]
ignore_missing_imports = true

[tool.radon]
exclude = "*/tests/*,*/test_*.py,*/migrations/*,*/generated/*"
ignore = ".git,.venv,build,dist,vendor,bin"
cc_min = "B"
cc_max = "F"
show_complexity = true
average = true
total_average = true
mi_min = "B"
mi_max = "C"
show_mi = true

[tool.coverage.run]
source = ["addon/anki_audio_quick_editor"]
omit = ["addon/anki_audio_quick_editor/vendor/*"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "if __name__",
    "pass",
    "pragma: no cover",
]

[tool.importlinter]
root_packages = ["anki_audio_quick_editor"]
include_external_packages = true
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
name = "import-safe-no-upper-layers"
type = "forbidden"
source_modules = [
    "anki_audio_quick_editor._version",
    "anki_audio_quick_editor.audio_operation_params",
    "anki_audio_quick_editor.audio_operations",
    "anki_audio_quick_editor.audio_pipeline",
    "anki_audio_quick_editor.audio_artifacts",
    "anki_audio_quick_editor.audio_commands",
    "anki_audio_quick_editor.audio_external",
    "anki_audio_quick_editor.audio_noise_reduction",
    "anki_audio_quick_editor.audio_pause_pipeline",
    "anki_audio_quick_editor.audio_pitch_hum",
    "anki_audio_quick_editor.audio_pitch_hum_frames",
    "anki_audio_quick_editor.audio_processor",
    "anki_audio_quick_editor.audio_rendering",
    "anki_audio_quick_editor.audio_state",
    "anki_audio_quick_editor.audio_tools",
    "anki_audio_quick_editor.audio_types",
    "anki_audio_quick_editor.batch_operations",
    "anki_audio_quick_editor.batch_visualization",
    "anki_audio_quick_editor.browser_dialog_state",
    "anki_audio_quick_editor.browser_report",
    "anki_audio_quick_editor.config_migration",
    "anki_audio_quick_editor.contracts_generated",
    "anki_audio_quick_editor.db_helpers",
    "anki_audio_quick_editor.diagnostics",
    "anki_audio_quick_editor.diagnostics_runtime",
    "anki_audio_quick_editor.dpdfnet_settings",
    "anki_audio_quick_editor.editor_actions",
    "anki_audio_quick_editor.editor_media",
    "anki_audio_quick_editor.editor_session",
    "anki_audio_quick_editor.editor_ui",
    "anki_audio_quick_editor.errors",
    "anki_audio_quick_editor.frontend_logs",
    "anki_audio_quick_editor.file_reveal",
    "anki_audio_quick_editor.i18n",
    "anki_audio_quick_editor.media_paths",
    "anki_audio_quick_editor.prosody_analyzer",
    "anki_audio_quick_editor.prosody_cache",
    "anki_audio_quick_editor.prosody_fallback",
    "anki_audio_quick_editor.prosody_praat",
    "anki_audio_quick_editor.prosody_settings",
    "anki_audio_quick_editor.prosody_svg",
    "anki_audio_quick_editor.prosody_types",
    "anki_audio_quick_editor.settings_state",
    "anki_audio_quick_editor.sound_refs",
    "anki_audio_quick_editor.support",
    "anki_audio_quick_editor.webview_bridge",
    "anki_audio_quick_editor.webview_shell",
]
forbidden_modules = [
    "anki_audio_quick_editor.browser_dialog",
    "anki_audio_quick_editor.browser_integration",
    "anki_audio_quick_editor.editor_analysis",
    "anki_audio_quick_editor.editor_bridge",
    "anki_audio_quick_editor.editor_callbacks",
    "anki_audio_quick_editor.editor_dependencies",
    "anki_audio_quick_editor.editor_frontend",
    "anki_audio_quick_editor.editor_frontend_callbacks",
    "anki_audio_quick_editor.editor_history",
    "anki_audio_quick_editor.editor_integration",
    "anki_audio_quick_editor.editor_playback",
    "anki_audio_quick_editor.editor_processing",
    "anki_audio_quick_editor.editor_region_delete",
    "anki_audio_quick_editor.editor_runtime",
    "anki_audio_quick_editor.editor_settings_actions",
    "anki_audio_quick_editor.editor_split_defaults",
    "anki_audio_quick_editor.settings",
    "anki_audio_quick_editor.settings.commands",
    "anki_audio_quick_editor.settings.initial_state",
]

[[tool.importlinter.contracts]]
name = "settings-backend-no-ui"
type = "forbidden"
source_modules = [
    "anki_audio_quick_editor.settings.commands",
    "anki_audio_quick_editor.settings.initial_state",
]
forbidden_modules = [
    "anki_audio_quick_editor.editor_integration",
]

[tool.bandit]
exclude_dirs = ["addon/anki_audio_quick_editor/vendor", "tests", "e2e"]

[tool.bandit.assert_used]
skips = [
    "*/tests/*",
    "*/e2e/*",
    "*_test.py",
    "test_*.py",
]

[tool.deptry]
known_first_party = ["anki_audio_quick_editor"]
extend_exclude = ["addon/anki_audio_quick_editor/vendor", "settings_ui", "scripts"]
ignore_notebooks = true

[tool.vulture]
paths = [
    "addon/anki_audio_quick_editor",
    "tests",
    "vulture_whitelist.py",
]
min_confidence = 80
sort_by_size = true
exclude = [
    "*/.venv/*",
    "*/build/*",
    "*/dist/*",
    "*/generated/*",
    "*/vendor/*",
]

[tool.deptry.package_module_name_map]
praat-parselmouth = ["parselmouth"]

[tool.deptry.per_rule_ignores]
DEP001 = ["aqt", "anki", "anki_audio_quick_editor", "debugpy", "parselmouth", "PyQt6", "dev"]
DEP002 = ["pytest-qt", "pytest-randomly"]
DEP003 = ["aqt", "anki", "PyQt6"]
DEP004 = ["parselmouth"]

[tool.mutmut]
paths_to_mutate = [
    "addon/anki_audio_quick_editor",
]
do_not_mutate = [
    "addon/anki_audio_quick_editor/__init__.py",
    "addon/anki_audio_quick_editor/_version.py",
    "addon/anki_audio_quick_editor/browser_integration.py",
    "addon/anki_audio_quick_editor/db_helpers.py",
    "addon/anki_audio_quick_editor/editor_actions.py",
    "addon/anki_audio_quick_editor/editor_integration.py",
    "addon/anki_audio_quick_editor/editor_ui.py",
    "addon/anki_audio_quick_editor/errors.py",
    "addon/anki_audio_quick_editor/prosody_analyzer.py",
    "addon/anki_audio_quick_editor/prosody_cache.py",
    "addon/anki_audio_quick_editor/prosody_fallback.py",
    "addon/anki_audio_quick_editor/prosody_praat.py",
    "addon/anki_audio_quick_editor/prosody_types.py",
    "addon/anki_audio_quick_editor/settings/__init__.py",
    "addon/anki_audio_quick_editor/settings/commands.py",
    "addon/anki_audio_quick_editor/settings/initial_state.py",
]
mutate_only_covered_lines = true
max_stack_depth = 8
pytest_add_cli_args = [
    "-p",
    "no:randomly",
    "-p",
    "no:random-order",
]
pytest_add_cli_args_test_selection = [
    "tests/test_audio_state.py",
    "tests/test_config_migration.py",
    "tests/test_sound_refs.py",
    "tests/test_settings_state.py",
    "tests/test_batch_visualization.py",
    "tests/test_prosody_svg.py",
    "tests/test_audio_processor.py",
]
